@@ -6,14 +6,14 @@
     <parent>
         <groupId>io.github.nhtuan10</groupId>
         <artifactId>modular</artifactId>
-        <version>0.0.3</version>
+        <version>0.0.3-jdk8</version>
     </parent>
 
     <artifactId>modular-impl</artifactId>
 
     <properties>
-        <maven.compiler.source>9</maven.compiler.source>
-        <maven.compiler.target>9</maven.compiler.target>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <classgraphVersion>4.8.179</classgraphVersion>
     </properties>
@@ -37,7 +37,7 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.5.16</version>
+            <version>1.3.15</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -108,12 +108,34 @@
                     <!--                        <arg>&#45;&#45;add-modules</arg>-->
                     <!--                        <arg>ALL-MODULE-PATH</arg>-->
                     <!--                    </compilerArgs>-->
-                    <compilerArgs>
-                        <arg>--add-reads</arg>
-                        <arg>io.github.nhtuan10.modular.impl=ALL-UNNAMED</arg>
-                    </compilerArgs>
+                    <!--                    <compilerArgs>-->
+                    <!--                        <arg>&#45;&#45;add-reads</arg>-->
+                    <!--                        <arg>io.github.nhtuan10.modular.impl=ALL-UNNAMED</arg>-->
+                    <!--                    </compilerArgs>-->
                 </configuration>
             </plugin>
+            <!--            <plugin>-->
+            <!--                <groupId>org.apache.maven.plugins</groupId>-->
+            <!--                <artifactId>maven-shade-plugin</artifactId>-->
+            <!--                <executions>-->
+            <!--                    <execution>-->
+            <!--                        <phase>package</phase>-->
+            <!--                        <goals>-->
+            <!--                            <goal>shade</goal>-->
+            <!--                        </goals>-->
+            <!--                        <configuration>-->
+            <!--                            <relocations>-->
+            <!--                                <relocation>-->
+            <!--                                    &lt;!&ndash; The original package name you want to change &ndash;&gt;-->
+            <!--                                    <pattern>org.apache.commons.lang3</pattern>-->
+            <!--                                    &lt;!&ndash; The new package destination name &ndash;&gt;-->
+            <!--                                    <shadedPattern>io.github.nhtuan10.org.apache.commons.lang3</shadedPattern>-->
+            <!--                                </relocation>-->
+            <!--                            </relocations>-->
+            <!--                        </configuration>-->
+            <!--                    </execution>-->
+            <!--                </executions>-->
+            <!--            </plugin>-->
         </plugins>
     </build>
 
